--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -4,14 +4,78 @@
 @import "../bower_components/font-awesome/less/font-awesome.less";
 @fa-font-path: "../fonts/font-awesome";
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+@import url(http://fonts.googleapis.com/css?family=Raleway);
+
+body {
+  background-color: #f3f3f3;
+  font-family: 'Raleway', sans-serif;
 }
 
-.jumbotron {
-  margin: 50px auto 0 auto;
+.w11k-logo {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 200px;
 }
+
+.description {
+  margin-bottom: 50px;
+  padding-bottom: 20px;
+
+  border-bottom: 1px solid #a5a5a5;
+
+  font-size: 30px;
+  text-align: center;
+}
+
+.box {
+  margin-bottom: 50px;
+  padding: 20px 50px 20px 50px;
+  border-radius: 5px;
+
+  font-size: 16px;
+  color: lightgrey;
+
+  img {
+    max-height: 100px;
+  }
+
+  .title {
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: bold;
+  }
+}
+
+.box-blue {
+  .box();
+  background-color: #556270;
+}
+
+.box-orange {
+  .box();
+  background-color: #D3643B;
+}
+
+.box-lightblue {
+  .box();
+  background-color: #729C98;
+}
+
+.box-purple {
+  .box();
+  background-color: #6A5E72;
+}
+
+.box-red {
+  .box();
+  background-color: #863538;
+
+  img {
+    margin-top: 14px;
+    max-width: 150px;
+  }
+}
+
+
+
 
