--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -48,6 +48,17 @@ body {
   }
 }
 
+.box-trello {
+  .box();
+
+  img {
+    padding-top: 15px;
+  }
+
+  background-color: #cfc8cb;
+  color: #4b4b4b;
+}
+
 .box-blue {
   .box();
   background-color: #556270;
